[package]
name = "http-server"
version = "0.1.0"
edition = "2021"
authors = ["Asman Mirza <rambo007.am@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"